# CICD_PRATICE

./: .gitignore  create_structure.py  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: mlops.yml
app/: app.py
data/processed/: test.csv  train.csv
data/raw/: train.csv
mlruns/1/models/m-4b087681fbc84c3db11a5bfb2fd7c91f/artifacts/: MLmodel  conda.yaml
models/: model.pkl
src/: data_ingestion.py  data_preprocessing.py  evaluate.py  train.py
