[project]
name = "cicd-pratice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.135.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
